# sdk-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: custom_sink.py  quickstart_async.py  quickstart_sync.py  redaction.py  serverless_flush.py
src/withboundary/sdk/: __init__.py  _meta.py  capture.py  config.py  events.py  factory.py  identifiers.py  lifecycle.py  queue.py  redact.py  runs.py
src/withboundary/sdk/batcher/: __init__.py  async_.py  sync.py
src/withboundary/sdk/logger/: __init__.py  async_.py  sync.py
src/withboundary/sdk/transport/: __init__.py  async_.py  breaker.py  errors.py  retry.py  sync.py
tests/: conftest.py  test_batcher_async.py  test_batcher_sync.py  test_capture.py  test_config.py  test_events.py  test_factory.py  test_factory_async.py  test_identifiers.py  test_lifecycle.py  test_logger_async.py  test_logger_sync.py  test_meta.py  test_queue.py  test_redact.py  test_runs.py  test_transport_async.py  test_transport_breaker.py  test_transport_retry.py  test_transport_sync.py
