[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "withboundary-sdk"
version = "0.0.0"
description = "Observability SDK for Boundary. Streams contract runs to the hosted dashboard with batching, redaction, and resilient delivery."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
  "llm",
  "observability",
  "telemetry",
  "tracing",
  "boundary",
  "contract",
  "openai",
  "anthropic",
  "pydantic",
  "asyncio",
  "httpx",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.5",
  "withboundary-contract>=0.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",
  "ruff>=0.7",
  "mypy>=1.11",
  "hatch>=1.13",
]

[project.urls]
Homepage = "https://withboundary.com"
Documentation = "https://docs.withboundary.com"
Repository = "https://github.com/withboundary/sdk-py"
Issues = "https://github.com/withboundary/sdk-py/issues"
Changelog = "https://github.com/withboundary/sdk-py/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/withboundary"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/pyproject.toml",
]
exclude = [
  "/CLAUDE.md",
  "/.claude",
  "/.plans",
  "/.github",
  "/examples",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
